--- a/HpToolsAborter/HpToolsAborter.csproj
+++ b/HpToolsAborter/HpToolsAborter.csproj
@@ -9,7 +9,7 @@
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>HpToolsAborter</RootNamespace>
-    <AssemblyName>HpToolsAborter</AssemblyName>
+    <AssemblyName>FTToolsAborter</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <TargetFrameworkProfile>
     </TargetFrameworkProfile>
@@ -35,10 +35,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="HpToolsLauncher, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
+    <Reference Include="FTToolsLauncher, Version=1.0.0.0, Culture=neutral, processorArchitecture=x86">
       <SpecificVersion>False</SpecificVersion>
       <ExecutableExtension>.exe</ExecutableExtension>
-      <HintPath>..\..\bin\HpToolsLauncher.exe</HintPath>
+      <HintPath>..\..\bin\FTToolsLauncher.exe</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
