--- a/ReportConverter/ReportConverter.csproj
+++ b/ReportConverter/ReportConverter.csproj
@@ -5,12 +5,12 @@
     <TargetFrameworks>net5.0;netcoreapp3.1;net48;net472;net461;net46;net452</TargetFrameworks>
     <Version>1.0-beta</Version>
     <Authors>Micro Focus or one of its affiliates.</Authors>
-    <Product>Micro Focus Functional Testing Automation Tools</Product>
-    <Copyright>© Copyright 1992-2021 Micro Focus or one of its affiliates.</Copyright>
+    <Product>Micro Focus UFT One CI Utilities</Product>
+    <Copyright>© Copyright 2021 Micro Focus or one of its affiliates.</Copyright>
     <Description>A command-line tool that converts UFT report to other formats.</Description>
     <RepositoryUrl>https://github.com/MicroFocus/ADM-FT-ToolsLauncher</RepositoryUrl>
-    <AssemblyVersion>1.0.20.2003</AssemblyVersion>
-    <FileVersion>1.0.20.2003</FileVersion>
+    <AssemblyVersion>1.0.21.1241</AssemblyVersion>
+    <FileVersion>1.0.21.1241</FileVersion>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(TargetFramework)|$(Platform)'=='Release|net5.0|AnyCPU'">
