US-1644937 [Azure] - How to not kill UFT process in Azure configure from Pipeline of UFT plug-in

--- a/HpToolsLauncher/HpToolsLauncher.csproj
+++ b/HpToolsLauncher/HpToolsLauncher.csproj
@@ -90,6 +90,8 @@
   <ItemGroup>
     <Compile Include="Common\JavaProperties.cs" />
     <Compile Include="Common\McConnectionInfo.cs" />
+    <Compile Include="Common\UftProps.cs" />
+    <Compile Include="Common\UftRUnMode.cs" />
     <Compile Include="ConsoleQuickEdit.cs" />
     <Compile Include="ElevatedProcess.cs" />
     <Compile Include="IProcessAdapter.cs" />
